# raylib_template

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
resources/: CMakeLists.txt
src/: CMakeLists.txt  main.c
